@@ -1,4 +1,4 @@
-Copyright (c) 2016, Brooke M. Fujita.
+Copyright (c) 2019, Brooke M. Fujita.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
