@@ -35,7 +35,7 @@ END_DESC
   s.add_development_dependency 'minitest'
 end
 
-# Copyright (c) 2015, Brooke M. Fujita.
+# Copyright (c) 2019, Brooke M. Fujita.
 # All rights reserved.
 # 
 # Redistribution and use in source and binary forms, with or without
