@@ -205,7 +205,7 @@ class TestOptionParse < Minitest::Test
   end
 end
 
-# Copyright (c) 2016, Brooke M. Fujita.
+# Copyright (c) 2019, Brooke M. Fujita.
 # All rights reserved.
 # 
 # Redistribution and use in source and binary forms, with or without
